fixed scrolltotop z-index, testing iphone safe area padding

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -2,7 +2,7 @@
     font-size: 1rem;
     color: white;
     margin: 0;
-    padding: 0;
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 
